# Loominary

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.gpu.yml  docker-compose.yml  main.py  pyproject.toml
docker/: llm.Dockerfile
loominary/: cli.py  config.py
loominary/auth/: google_auth.py  spotify_auth.py
loominary/database/: repository.py  schema.py
loominary/drive/: uploader.py
loominary/meeting/: audio_devices.py  config.py  errors.py  pipeline.py  recorder.py  scheduler.py  shutdown.py  transcriber.py
loominary/rag/: __init__.py  chat.py  chunker.py  cli.py  embedder.py  indexer.py  qdrant.py  retriever.py
loominary/rss/: discovery.py  downloader.py
loominary/spotify/: link_parser.py  metadata.py  search.py
loominary/transcription/: base.py  faster_whisper_engine.py  whisper_engine.py
loominary/utils/: file_naming.py  progress.py
